--- a/galeri.html
+++ b/galeri.html
@@ -6,8 +6,8 @@
     <link crossorigin="" href="https://fonts.gstatic.com/" rel="preconnect" />
     <link as="style" href="https://fonts.googleapis.com/css2?display=swap&amp;family=Lexend%3Awght%40400%3B500%3B700%3B900&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900" onload="this.rel='stylesheet'" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <title>2025 Yılının Gözde Duvar Renkleri - İstanbul Boyacınız Blog</title>
-    <meta name="description" content="Bu yılın trend renkleriyle evinize modern bir dokunuş katın. Doğadan ilham alan tonlar ve cesur renkler ön planda.">
+    <title>Galerimiz - İstanbul Boyacınız | Önceki Çalışmalarımız</title>
+    <meta name="description" content="Tamamladığımız iç cephe, dış cephe ve ticari boya projelerinden görseller. İstanbul Boyacınız'ın kaliteli işçiliğine ve profesyonel dokunuşlarına göz atın.">
     <link href="img/Logo.png" rel="icon" type="image/png">
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <style type="text/tailwindcss">
@@ -20,6 +20,10 @@
         #mobile-menu.open { clip-path: circle(150% at calc(100% - 44px) 54px); pointer-events: auto; }
         .header-sticky { position: fixed; top: 0; left: 0; right: 0; width: 100%; animation: slideDown 0.5s ease-out; box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1); }
         @keyframes slideDown { from { transform: translateY(-100%); } to { transform: translateY(0); } }
+        .lightbox { display: none; position: fixed; z-index: 999; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.8); justify-content: center; align-items: center; }
+        .lightbox img { max-width: 90%; max-height: 80%; }
+        .lightbox .close { position: absolute; top: 15px; right: 35px; color: #f1f1f1; font-size: 40px; font-weight: bold; transition: 0.3s; }
+        .lightbox .close:hover, .lightbox .close:focus { color: #bbb; text-decoration: none; cursor: pointer; }
     </style>
 </head>
 <body class="bg-white">
@@ -62,32 +66,51 @@
             <nav class="flex flex-col items-center justify-center gap-8 text-center">
                 <a class="text-3xl font-bold text-white hover:text-[var(--primary-300)] transition-colors" href="index.html">Anasayfa</a>
                 <a class="text-3xl font-bold text-white hover:text-[var(--primary-300)] transition-colors" href="hizmetler.html">Hizmetlerimiz</a>
+                <a class="text-3xl font-bold text-white hover:text-[var(--primary-300)] transition-colors" href="hakkimizda.html">Hakkımızda</a>
+                <a class="text-3xl font-bold text-white hover:text-[var(--primary-300)] transition-colors" href="galeri.html">Galerimiz</a>
                 <a class="text-3xl font-bold text-white hover:text-[var(--primary-300)] transition-colors" href="blog.html">Blog</a>
                 <a class="text-3xl font-bold text-white hover:text-[var(--primary-300)] transition-colors" href="iletisim.html">İletişim</a>
             </nav>
         </div>
 
         <main id="main-content" class="flex-grow">
-            <article class="py-16 sm:py-24 bg-white">
-                <div class="max-w-3xl mx-auto px-4 sm:px-6 lg:px-8">
-                    <a href="blog.html" class="text-[var(--primary-600)] font-semibold hover:underline">&larr; Blog'a Geri Dön</a>
-                    <h1 class="mt-4 text-4xl md:text-5xl font-black text-gray-900">2025 Yılının Gözde Duvar Renkleri</h1>
-                    <p class="mt-4 text-lg text-gray-500">Yayınlanma Tarihi: 1 Ağustos 2025</p>
-                    <div class="mt-8 h-96 w-full bg-cover bg-center rounded-lg shadow-lg" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCWbLxa4eUWJscCEUewVmDbTRmBw9lnUWJTxgvyvKMUjRR3HEnYbNVzpgbqEhlyrS_wgz_09qpoH8fQdku9obfEAjK7fMpW7JLgScprEK1B-hc9mZRyBQefFljQF25JPTM9NFJvC6VAzdJKPW53SczjsWyXeywxA792dB-QtyZFGePMgeFf_wSP-burswp491pA47Jn-ct57nKmwXPyXVdN2Wfzar2k-bfgV1pa0IEqtUOX0L_zHG8l4D5n53wAYmi4lV9AYTXkx8o");' role="img" aria-label="2025 yılı trend renklerini yansıtan modern ve şık bir oda"></div>
-                    <div class="mt-8 prose prose-lg max-w-none text-gray-700">
-                        <p>Bu yılın trend renkleriyle evinize modern bir dokunuş katın. 2025, doğallığın ve sakinliğin ön planda olduğu bir yıl olacak. Duvarlarınızda kullanacağınız renklerle sadece bir odayı değil, tüm yaşam alanınızın enerjisini değiştirebilirsiniz.</p>
-                        <p>İşte bu yılın öne çıkan renk paletleri:</p>
-                        <h2>1. Toprak Tonları ve Sıcak Nötrler</h2>
-                        <p>Bej, krem, terakota ve yanık turuncu gibi renkler, mekanlara sıcaklık ve samimiyet katıyor. Bu tonlar, özellikle ahşap mobilyalar ve doğal tekstillerle birleştiğinde huzurlu ve davetkar bir atmosfer yaratır. Minimalist ve bohem dekorasyon stilleri için mükemmel bir zemin oluştururlar.</p>
-                        <h2>2. Doğadan İlham Alan Yeşiller</h2>
-                        <p>Adaçayı yeşili, zeytin yeşili ve nane tonları, doğayı evinize taşımanın en zarif yollarından biri. Bu renkler, stresi azaltıcı ve sakinleştirici etkileriyle bilinir. Özellikle yatak odaları ve çalışma alanları için idealdir. Beyaz, gri ve açık ahşap renkleriyle harika bir uyum yakalarlar.</p>
-                        <h2>3. Cesur ve Derin Maviler</h2>
-                        <p>Gece mavisi ve lacivert gibi derin tonlar, mekanlara sofistike ve asil bir hava katıyor. Özellikle tek bir duvarı vurgulamak (accent wall) için kullanıldığında dramatik bir etki yaratır. Altın veya pirinç detaylarla birleştiğinde lüks bir görünüm elde edebilirsiniz.</p>
-                        <p>Unutmayın, renk seçimi kişisel bir zevktir. Ancak bu trendler, evinize yeni bir soluk getirmek için size ilham verebilir. Hangi rengin sizin için doğru olduğuna karar veremiyorsanız, profesyonel ekibimizden ücretsiz renk danışmanlığı alabilirsiniz.</p>
+            <section class="bg-cover bg-center py-20 md:py-32" style='background-image: linear-gradient(rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0.8) 100%), url("https://lh3.googleusercontent.com/aida-public/AB6AXuC7E-2FSV2k94bVs7jAudwqaiw1I50vhxX9KbPQI9_Jf1qt2Cy7S95uFmslJD7dlmmC2xn_f0Xap8AtV1HGKU2KutLRnnKUz_kq0XXpj9GMYqiDLQx-zObG-nFdZFH4HpGtTNLzI5cXMcxbQ922TCLdQcFkHnBVZVHPbV7JrCHvP8O-BriHFR4T7rwMwrrlv4QuEovUFRfIDEQU3AhuYh3O-FH8iIBzSqb2T27sOt7mYbJWjCirAR4ctbO3PtxJkV08zmMdjw50O_Q");'>
+                <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center text-white">
+                    <h1 class="text-4xl md:text-6xl font-black">Galerimiz</h1>
+                    <p class="mt-4 text-lg md:text-xl font-light">Dönüşümün Gücünü Kendi Gözlerinizle Görün</p>
+                </div>
+            </section>
+
+            <section class="py-16 sm:py-24 bg-gray-50">
+                <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+                    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+                        <div class="group relative overflow-hidden rounded-lg shadow-lg cursor-pointer">
+                            <img class="h-72 w-full object-cover transition-transform duration-500 group-hover:scale-110" src="https://lh3.googleusercontent.com/aida-public/AB6AXuCWbLxa4eUWJscCEUewVmDbTRmBw9lnUWJTxgvyvKMUjRR3HEnYbNVzpgbqEhlyrS_wgz_09qpoH8fQdku9obfEAjK7fMpW7JLgScprEK1B-hc9mZRyBQefFljQF25JPTM9NFJvC6VAzdJKPW53SczjsWyXeywxA792dB-QtyZFGePMgeFf_wSP-burswp491pA47Jn-ct57nKmwXPyXVdN2Wfzar2k-bfgV1pa0IEqtUOX0L_zHG8l4D5n53wAYmi4lV9AYTXkx8o" alt="Modern Salon Boyama Projesi">
+                        </div>
+                        <div class="group relative overflow-hidden rounded-lg shadow-lg cursor-pointer">
+                            <img class="h-72 w-full object-cover transition-transform duration-500 group-hover:scale-110" src="https://lh3.googleusercontent.com/aida-public/AB6AXuBlowHjSZOOmamVQaj4TDVCZczKe7H-uCx1rfGK-ZvJHVIDYuVVeP4byI66btNyPT2_F0JTjqAs1xs6Nv_KNYD7LMWch0hFIlXd7kSoaNGmQZoizTT2n9R7lMTRNGgcuyJoIxEUzIwqsZuSCeU7TWgOeOZOy0i6cs8EeEemHCuXE18JsjiMDGeWtmOusZPJyqziEGPeMlh_mQMcnRuXlj_yJFEcev5UCtYtHnYEGdDXMk0RARO9gS-93sQwqX-y3PwA9sKT0c6SCgY" alt="Dış Cephe Villa Boyama">
+                        </div>
+                        <div class="group relative overflow-hidden rounded-lg shadow-lg cursor-pointer">
+                            <img class="h-72 w-full object-cover transition-transform duration-500 group-hover:scale-110" src="https://lh3.googleusercontent.com/aida-public/AB6AXuC7E-2FSV2k94bVs7jAudwqaiw1I50vhxX9KbPQI9_Jf1qt2Cy7S95uFmslJD7dlmmC2xn_f0Xap8AtV1HGKU2KutLRnnKUz_kq0XXpj9GMYqiDLQx-zObG-nFdZFH4HpGtTNLzI5cXMcxbQ922TCLdQcFkHnBVZVHPbV7JrCHvP8O-BriHFR4T7rwMwrrlv4QuEovUFRfIDEQU3AhuYh3O-FH8iIBzSqb2T27sOt7mYbJWjCirAR4ctbO3PtxJkV08zmMdjw50O_Q" alt="Ofis İç Mekan Boyama">
+                        </div>
+                         <div class="group relative overflow-hidden rounded-lg shadow-lg cursor-pointer">
+                            <img class="h-72 w-full object-cover transition-transform duration-500 group-hover:scale-110" src="https://lh3.googleusercontent.com/aida-public/AB6AXuC8S17uMvD7GJ5ppggmbtW_1h7AXQh-wokMlTSJSLcqvXLwOWiRCNoGvpJ-rlCwajuixafVwh7VXfjT2J11U3beSiJYstDO3xAikmqH83d9-DjF7n5gCZB0lTLXZbQpdZdcbDbwRmQrl-i3xNh0508vBiJrrvm_7nRI6nzPvxb4IRKjQHDaiq6RtKIcwuLq6wV5X5OzyuM9UIbOARH6hWTqIQ4hHNrCfVJphPkZjSB5zcHYxMOIYwQ__RbfesH_-CKKaLN4VwCoBFA" alt="Apartman Dış Cephe Yenileme">
+                        </div>
+                        <div class="group relative overflow-hidden rounded-lg shadow-lg cursor-pointer">
+                            <img class="h-72 w-full object-cover transition-transform duration-500 group-hover:scale-110" src="https://lh3.googleusercontent.com/aida-public/AB6AXuCpyYaCG2xIfl3GvHQMBa968oMFE2VG4bIegxDOjeTKF5SpH0CnESPPFrF9cL5Sso9mgOvIvc3l2keuRZDNx7HCo9oVHPOWhhdWLHUyQNLOe_VAL7SYxDhNuRt-FDJ5t1hUZHuElPd43mdT8dX_hfufFuNn6Iq8QmgdA805MhLducCi9itzi4HyaJKVD6ckwU_blUs8eLOLUtQT-4ya7IKtqB72zVE2gR48GOsjDHD3cTGLB5qgSoPeMXo3aU-cX8Vfk3WYD3IMAuk" alt="Yatak Odası Boyama">
+                        </div>
+                        <div class="group relative overflow-hidden rounded-lg shadow-lg cursor-pointer">
+                            <img class="h-72 w-full object-cover transition-transform duration-500 group-hover:scale-110" src="https://lh3.googleusercontent.com/aida-public/AB6AXuC0HzCs81B3EvBwL41ZoYGP5dv3MFhBM0BFgeIxBpLnsGtkeZACfM3_32XflMwi_Cb_IQxpRBapmotDhRigR0vEJYBmmoXIEeXOEA90XkhIFSu00x10Mh3VILp3HlfmFdkw7i4UQdijIKtuReHGwm8nPStUAa-EHDAOriXT19AknIZhaGaFjjFbG2gPIy6LVUZzwN1OWVhEN9VaK2ayCCj1JsXMiLqfewFHRif6YU-cNXhEggW92B5C8f1UzCQPCx521YBQmU3YA1s" alt="Mutfak Duvar Boyama">
+                        </div>
                     </div>
                 </div>
-            </article>
+            </section>
         </main>
+
+        <div id="lightbox" class="lightbox">
+            <span class="close">&times;</span>
+            <img class="lightbox-content" id="lightbox-img">
+        </div>
 
         <footer class="bg-[var(--secondary-900)] text-white">
             <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:px-8">
@@ -164,6 +187,7 @@
         menuButton.addEventListener('click', () => { if (mobileMenu.classList.contains('open')) { closeMenu(); } else { openMenu(); } });
         closeMenuButton.addEventListener('click', closeMenu);
         menuLinks.forEach(link => { link.addEventListener('click', closeMenu); });
+        
         document.addEventListener('DOMContentLoaded', () => {
             const header = document.getElementById('main-header');
             const mainContent = document.getElementById('main-content');
@@ -173,6 +197,27 @@
                 if (window.scrollY > 50) { if (!header.classList.contains('header-sticky')) { headerHeight = header.offsetHeight; mainContent.style.paddingTop = `${headerHeight}px`; header.classList.add('header-sticky'); } }
                 else { if (header.classList.contains('header-sticky')) { header.classList.remove('header-sticky'); mainContent.style.paddingTop = '0'; } }
             }, { passive: true });
+
+            const lightbox = document.getElementById('lightbox');
+            const lightboxImg = document.getElementById('lightbox-img');
+            const galleryImages = document.querySelectorAll('.gallery-image');
+            
+            document.querySelectorAll('.group.cursor-pointer img').forEach(image => {
+                image.addEventListener('click', () => {
+                    lightbox.style.display = 'flex';
+                    lightboxImg.src = image.src;
+                });
+            });
+
+            lightbox.querySelector('.close').addEventListener('click', () => {
+                lightbox.style.display = 'none';
+            });
+
+            lightbox.addEventListener('click', (e) => {
+                if (e.target === lightbox) {
+                    lightbox.style.display = 'none';
+                }
+            });
         });
     </script>
 </body>
