--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -6,8 +6,8 @@
     <link crossorigin="" href="https://fonts.gstatic.com/" rel="preconnect" />
     <link as="style" href="https://fonts.googleapis.com/css2?display=swap&amp;family=Lexend%3Awght%40400%3B500%3B700%3B900&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900" onload="this.rel='stylesheet'" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <title>2025 Yılının Gözde Duvar Renkleri - İstanbul Boyacınız Blog</title>
-    <meta name="description" content="Bu yılın trend renkleriyle evinize modern bir dokunuş katın. Doğadan ilham alan tonlar ve cesur renkler ön planda.">
+    <title>Hakkımızda - İstanbul Boyacınız | Profesyonel Boya Badana</title>
+    <meta name="description" content="İstanbul Boyacınız olarak yılların tecrübesiyle, müşteri memnuniyetini ön planda tutarak profesyonel boya badana hizmetleri sunuyoruz. Hikayemizi ve değerlerimizi keşfedin.">
     <link href="img/Logo.png" rel="icon" type="image/png">
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <style type="text/tailwindcss">
@@ -62,31 +62,55 @@
             <nav class="flex flex-col items-center justify-center gap-8 text-center">
                 <a class="text-3xl font-bold text-white hover:text-[var(--primary-300)] transition-colors" href="index.html">Anasayfa</a>
                 <a class="text-3xl font-bold text-white hover:text-[var(--primary-300)] transition-colors" href="hizmetler.html">Hizmetlerimiz</a>
+                <a class="text-3xl font-bold text-white hover:text-[var(--primary-300)] transition-colors" href="hakkimizda.html">Hakkımızda</a>
+                <a class="text-3xl font-bold text-white hover:text-[var(--primary-300)] transition-colors" href="galeri.html">Galerimiz</a>
                 <a class="text-3xl font-bold text-white hover:text-[var(--primary-300)] transition-colors" href="blog.html">Blog</a>
                 <a class="text-3xl font-bold text-white hover:text-[var(--primary-300)] transition-colors" href="iletisim.html">İletişim</a>
             </nav>
         </div>
 
         <main id="main-content" class="flex-grow">
-            <article class="py-16 sm:py-24 bg-white">
-                <div class="max-w-3xl mx-auto px-4 sm:px-6 lg:px-8">
-                    <a href="blog.html" class="text-[var(--primary-600)] font-semibold hover:underline">&larr; Blog'a Geri Dön</a>
-                    <h1 class="mt-4 text-4xl md:text-5xl font-black text-gray-900">2025 Yılının Gözde Duvar Renkleri</h1>
-                    <p class="mt-4 text-lg text-gray-500">Yayınlanma Tarihi: 1 Ağustos 2025</p>
-                    <div class="mt-8 h-96 w-full bg-cover bg-center rounded-lg shadow-lg" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCWbLxa4eUWJscCEUewVmDbTRmBw9lnUWJTxgvyvKMUjRR3HEnYbNVzpgbqEhlyrS_wgz_09qpoH8fQdku9obfEAjK7fMpW7JLgScprEK1B-hc9mZRyBQefFljQF25JPTM9NFJvC6VAzdJKPW53SczjsWyXeywxA792dB-QtyZFGePMgeFf_wSP-burswp491pA47Jn-ct57nKmwXPyXVdN2Wfzar2k-bfgV1pa0IEqtUOX0L_zHG8l4D5n53wAYmi4lV9AYTXkx8o");' role="img" aria-label="2025 yılı trend renklerini yansıtan modern ve şık bir oda"></div>
-                    <div class="mt-8 prose prose-lg max-w-none text-gray-700">
-                        <p>Bu yılın trend renkleriyle evinize modern bir dokunuş katın. 2025, doğallığın ve sakinliğin ön planda olduğu bir yıl olacak. Duvarlarınızda kullanacağınız renklerle sadece bir odayı değil, tüm yaşam alanınızın enerjisini değiştirebilirsiniz.</p>
-                        <p>İşte bu yılın öne çıkan renk paletleri:</p>
-                        <h2>1. Toprak Tonları ve Sıcak Nötrler</h2>
-                        <p>Bej, krem, terakota ve yanık turuncu gibi renkler, mekanlara sıcaklık ve samimiyet katıyor. Bu tonlar, özellikle ahşap mobilyalar ve doğal tekstillerle birleştiğinde huzurlu ve davetkar bir atmosfer yaratır. Minimalist ve bohem dekorasyon stilleri için mükemmel bir zemin oluştururlar.</p>
-                        <h2>2. Doğadan İlham Alan Yeşiller</h2>
-                        <p>Adaçayı yeşili, zeytin yeşili ve nane tonları, doğayı evinize taşımanın en zarif yollarından biri. Bu renkler, stresi azaltıcı ve sakinleştirici etkileriyle bilinir. Özellikle yatak odaları ve çalışma alanları için idealdir. Beyaz, gri ve açık ahşap renkleriyle harika bir uyum yakalarlar.</p>
-                        <h2>3. Cesur ve Derin Maviler</h2>
-                        <p>Gece mavisi ve lacivert gibi derin tonlar, mekanlara sofistike ve asil bir hava katıyor. Özellikle tek bir duvarı vurgulamak (accent wall) için kullanıldığında dramatik bir etki yaratır. Altın veya pirinç detaylarla birleştiğinde lüks bir görünüm elde edebilirsiniz.</p>
-                        <p>Unutmayın, renk seçimi kişisel bir zevktir. Ancak bu trendler, evinize yeni bir soluk getirmek için size ilham verebilir. Hangi rengin sizin için doğru olduğuna karar veremiyorsanız, profesyonel ekibimizden ücretsiz renk danışmanlığı alabilirsiniz.</p>
+            <section class="bg-cover bg-center py-20 md:py-32" style='background-image: linear-gradient(rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0.8) 100%), url("https://lh3.googleusercontent.com/aida-public/AB6AXuCpyYaCG2xIfl3GvHQMBa968oMFE2VG4bIegxDOjeTKF5SpH0CnESPPFrF9cL5Sso9mgOvIvc3l2keuRZDNx7HCo9oVHPOWhhdWLHUyQNLOe_VAL7SYxDhNuRt-FDJ5t1hUZHuElPd43mdT8dX_hfufFuNn6Iq8QmgdA805MhLducCi9itzi4HyaJKVD6ckwU_blUs8eLOLUtQT-4ya7IKtqB72zVE2gR48GOsjDHD3cTGLB5qgSoPeMXo3aU-cX8Vfk3WYD3IMAuk");'>
+                <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center text-white">
+                    <h1 class="text-4xl md:text-6xl font-black">Hakkımızda</h1>
+                    <p class="mt-4 text-lg md:text-xl font-light">Kalite, Güven ve Sanatın Buluştuğu Adres</p>
+                </div>
+            </section>
+
+            <section class="py-16 sm:py-24 bg-white">
+                <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
+                        <div class="h-96 rounded-lg overflow-hidden shadow-xl">
+                            <div class="h-full w-full bg-cover bg-center" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuC0HzCs81B3EvBwL41ZoYGP5dv3MFhBM0BFgeIxBpLnsGtkeZACfM3_32XflMwi_Cb_IQxpRBapmotDhRigR0vEJYBmmoXIEeXOEA90XkhIFSu00x10Mh3VILp3HlfmFdkw7i4UQdijIKtuReHGwm8nPStUAa-EHDAOriXT19AknIZhaGaFjjFbG2gPIy6LVUZzwN1OWVhEN9VaK2ayCCj1JsXMiLqfewFHRif6YU-cNXhEggW92B5C8f1UzCQPCx521YBQmU3YA1s");'></div>
+                        </div>
+                        <div>
+                            <h2 class="text-3xl font-extrabold text-[var(--secondary-900)]">Biz Kimiz?</h2>
+                            <p class="mt-4 text-lg text-[var(--secondary-600)]">İstanbul Boyacınız, boya badana sektöründe yılların getirdiği tecrübe ve birikimle kurulmuş bir aile işletmesidir. Sanatı ve zanaatı bir araya getirerek, mekanlarınıza sadece renk değil, aynı zamanda karakter ve ruh katmayı hedefliyoruz. Kurulduğumuz günden bu yana, yüzlerce evi ve iş yerini hayallerdeki renklere kavuşturmanın gururunu yaşıyoruz.</p>
+                            <p class="mt-4 text-lg text-[var(--secondary-600)]">Temel prensibimiz, dürüstlük, şeffaflık ve %100 müşteri memnuniyetidir. Her projeye aynı özen ve titizlikle yaklaşıyor, işimizi zamanında ve temiz bir şekilde teslim etmeyi taahhüt ediyoruz.</p>
+                        </div>
+                    </div>
+                    <div class="mt-16 sm:mt-24 text-center">
+                        <h3 class="text-3xl font-extrabold text-[var(--secondary-900)]">Değerlerimiz</h3>
+                        <div class="mt-12 grid grid-cols-1 gap-y-10 gap-x-8 sm:grid-cols-2 lg:grid-cols-3">
+                            <div class="text-center">
+                                <div class="mx-auto flex h-12 w-12 items-center justify-center rounded-full bg-[var(--primary-100)] text-[var(--primary-600)]"><span class="material-icons">workspace_premium</span></div>
+                                <h4 class="mt-5 text-lg font-semibold text-[var(--secondary-900)]">Kaliteye Bağlılık</h4>
+                                <p class="mt-2 text-base text-[var(--secondary-600)]">Sadece en iyi markaların, insan sağlığına zararsız ve uzun ömürlü ürünlerini kullanıyoruz.</p>
+                            </div>
+                            <div class="text-center">
+                                <div class="mx-auto flex h-12 w-12 items-center justify-center rounded-full bg-[var(--primary-100)] text-[var(--primary-600)]"><span class="material-icons">groups</span></div>
+                                <h4 class="mt-5 text-lg font-semibold text-[var(--secondary-900)]">Uzman Ekip</h4>
+                                <p class="mt-2 text-base text-[var(--secondary-600)]">Ekibimiz, alanında deneyimli, sigortalı ve güler yüzlü ustalardan oluşmaktadır.</p>
+                            </div>
+                            <div class="text-center">
+                                <div class="mx-auto flex h-12 w-12 items-center justify-center rounded-full bg-[var(--primary-100)] text-[var(--primary-600)]"><span class="material-icons">shield</span></div>
+                                <h4 class="mt-5 text-lg font-semibold text-[var(--secondary-900)]">Güvenilirlik</h4>
+                                <p class="mt-2 text-base text-[var(--secondary-600)]">Verdiğimiz sözlerin arkasındayız. Belirlenen bütçe ve zaman planına sadık kalırız.</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </article>
+            </section>
         </main>
 
         <footer class="bg-[var(--secondary-900)] text-white">
