--- a/ticari-boyama.html
+++ b/ticari-boyama.html
@@ -6,8 +6,8 @@
     <link crossorigin="" href="https://fonts.gstatic.com/" rel="preconnect" />
     <link as="style" href="https://fonts.googleapis.com/css2?display=swap&amp;family=Lexend%3Awght%40400%3B500%3B700%3B900&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900" onload="this.rel='stylesheet'" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <title>2025 Yılının Gözde Duvar Renkleri - İstanbul Boyacınız Blog</title>
-    <meta name="description" content="Bu yılın trend renkleriyle evinize modern bir dokunuş katın. Doğadan ilham alan tonlar ve cesur renkler ön planda.">
+    <title>Ticari Alan Boyama - İstanbul Boyacınız</title>
+    <meta name="description" content="Ofis, mağaza, restoran gibi ticari mekanlarınız için iş akışınızı aksatmayacak esnek, hızlı ve profesyonel boya çözümleri sunuyoruz.">
     <link href="img/Logo.png" rel="icon" type="image/png">
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <style type="text/tailwindcss">
@@ -68,25 +68,47 @@
         </div>
 
         <main id="main-content" class="flex-grow">
-            <article class="py-16 sm:py-24 bg-white">
-                <div class="max-w-3xl mx-auto px-4 sm:px-6 lg:px-8">
-                    <a href="blog.html" class="text-[var(--primary-600)] font-semibold hover:underline">&larr; Blog'a Geri Dön</a>
-                    <h1 class="mt-4 text-4xl md:text-5xl font-black text-gray-900">2025 Yılının Gözde Duvar Renkleri</h1>
-                    <p class="mt-4 text-lg text-gray-500">Yayınlanma Tarihi: 1 Ağustos 2025</p>
-                    <div class="mt-8 h-96 w-full bg-cover bg-center rounded-lg shadow-lg" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCWbLxa4eUWJscCEUewVmDbTRmBw9lnUWJTxgvyvKMUjRR3HEnYbNVzpgbqEhlyrS_wgz_09qpoH8fQdku9obfEAjK7fMpW7JLgScprEK1B-hc9mZRyBQefFljQF25JPTM9NFJvC6VAzdJKPW53SczjsWyXeywxA792dB-QtyZFGePMgeFf_wSP-burswp491pA47Jn-ct57nKmwXPyXVdN2Wfzar2k-bfgV1pa0IEqtUOX0L_zHG8l4D5n53wAYmi4lV9AYTXkx8o");' role="img" aria-label="2025 yılı trend renklerini yansıtan modern ve şık bir oda"></div>
-                    <div class="mt-8 prose prose-lg max-w-none text-gray-700">
-                        <p>Bu yılın trend renkleriyle evinize modern bir dokunuş katın. 2025, doğallığın ve sakinliğin ön planda olduğu bir yıl olacak. Duvarlarınızda kullanacağınız renklerle sadece bir odayı değil, tüm yaşam alanınızın enerjisini değiştirebilirsiniz.</p>
-                        <p>İşte bu yılın öne çıkan renk paletleri:</p>
-                        <h2>1. Toprak Tonları ve Sıcak Nötrler</h2>
-                        <p>Bej, krem, terakota ve yanık turuncu gibi renkler, mekanlara sıcaklık ve samimiyet katıyor. Bu tonlar, özellikle ahşap mobilyalar ve doğal tekstillerle birleştiğinde huzurlu ve davetkar bir atmosfer yaratır. Minimalist ve bohem dekorasyon stilleri için mükemmel bir zemin oluştururlar.</p>
-                        <h2>2. Doğadan İlham Alan Yeşiller</h2>
-                        <p>Adaçayı yeşili, zeytin yeşili ve nane tonları, doğayı evinize taşımanın en zarif yollarından biri. Bu renkler, stresi azaltıcı ve sakinleştirici etkileriyle bilinir. Özellikle yatak odaları ve çalışma alanları için idealdir. Beyaz, gri ve açık ahşap renkleriyle harika bir uyum yakalarlar.</p>
-                        <h2>3. Cesur ve Derin Maviler</h2>
-                        <p>Gece mavisi ve lacivert gibi derin tonlar, mekanlara sofistike ve asil bir hava katıyor. Özellikle tek bir duvarı vurgulamak (accent wall) için kullanıldığında dramatik bir etki yaratır. Altın veya pirinç detaylarla birleştiğinde lüks bir görünüm elde edebilirsiniz.</p>
-                        <p>Unutmayın, renk seçimi kişisel bir zevktir. Ancak bu trendler, evinize yeni bir soluk getirmek için size ilham verebilir. Hangi rengin sizin için doğru olduğuna karar veremiyorsanız, profesyonel ekibimizden ücretsiz renk danışmanlığı alabilirsiniz.</p>
+            <section class="bg-cover bg-center py-20 md:py-32" style='background-image: linear-gradient(rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0.8) 100%), url("https://lh3.googleusercontent.com/aida-public/AB6AXuC7E-2FSV2k94bVs7jAudwqaiw1I50vhxX9KbPQI9_Jf1qt2Cy7S95uFmslJD7dlmmC2xn_f0Xap8AtV1HGKU2KutLRnnKUz_kq0XXpj9GMYqiDLQx-zObG-nFdZFH4HpGtTNLzI5cXMcxbQ922TCLdQcFkHnBVZVHPbV7JrCHvP8O-BriHFR4T7rwMwrrlv4QuEovUFRfIDEQU3AhuYh3O-FH8iIBzSqb2T27sOt7mYbJWjCirAR4ctbO3PtxJkV08zmMdjw50O_Q");'>
+                <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center text-white">
+                    <h1 class="text-4xl md:text-6xl font-black">Ticari Alan Boyama</h1>
+                    <p class="mt-4 text-lg md:text-xl font-light">İşletmeniz için profesyonel ve davetkar bir ortam yaratıyoruz.</p>
+                </div>
+            </section>
+
+            <section id="hizmet-detaylari" class="py-16 sm:py-24 bg-white">
+                <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+                    <div class="grid grid-cols-1 lg:grid-cols-3 gap-12">
+                        <div class="lg:col-span-2">
+                            <div class="prose prose-lg max-w-none text-gray-700">
+                                <p class="lead">İşletmenizin görünümü, marka imajınızın ve müşteri algısının önemli bir parçasıdır. Ofis, mağaza, restoran, otel veya üretim tesisi gibi ticari alanlarınız için sunduğumuz profesyonel boya hizmetleriyle, hem çalışanlarınız için motive edici hem de müşterileriniz için davetkar ve kurumsal kimliğinizi yansıtan mekanlar yaratıyoruz.</p>
+                                
+                                <h3>Ticari Alanlarda Neden Profesyonel Boya Hizmeti Önemlidir?</h3>
+                                <ul>
+                                    <li><strong>Marka Kimliği:</strong> Kurumsal renklerinizin doğru tonlarda ve kusursuz bir şekilde uygulanması, marka bilinirliğinizi ve profesyonel imajınızı güçlendirir.</li>
+                                    <li><strong>Müşteri Deneyimi:</strong> Temiz, modern ve ferah bir mekan, müşterilerinizin işletmenizde daha uzun süre ve keyifli vakit geçirmesini sağlar.</li>
+                                    <li><strong>Çalışan Verimliliği:</strong> Aydınlık ve doğru renklerle tasarlanmış bir çalışma ortamı, çalışan motivasyonunu ve verimliliğini artırır.</li>
+                                    <li><strong>Dayanıklılık:</strong> Ticari alanlar yüksek trafikli bölgelerdir. Bu nedenle, sürtünmeye, lekelenmeye ve yoğun kullanıma dayanıklı, endüstriyel tipte boyalar kullanmak uzun vadede maliyet avantajı sağlar.</li>
+                                </ul>
+
+                                <h3>İş Akışınızı Aksatmayan Esnek Çözümler</h3>
+                                <p>Ticari işletmeler için zamanın ne kadar değerli olduğunu biliyoruz. Bu nedenle, iş akışınızı minimum düzeyde etkileyecek şekilde esnek çalışma saatleri sunuyoruz. Gerekirse gece veya hafta sonu çalışarak, işletmeniz kapalıyken boya uygulamasını tamamlıyor ve mekanınızı size en hızlı şekilde teslim ediyoruz.</p>
+                                <p>Hızlı kuruyan, düşük kokulu ve insan sağlığına zararsız ürünler tercih ederek, çalışanlarınızın ve müşterilerinizin sağlığını ön planda tutuyoruz.</p>
+                            </div>
+                        </div>
+                        <div class="h-96 lg:h-auto rounded-lg overflow-hidden shadow-xl">
+                            <div class="h-full w-full bg-cover bg-center" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuC7E-2FSV2k94bVs7jAudwqaiw1I50vhxX9KbPQI9_Jf1qt2Cy7S95uFmslJD7dlmmC2xn_f0Xap8AtV1HGKU2KutLRnnKUz_kq0XXpj9GMYqiDLQx-zObG-nFdZFH4HpGtTNLzI5cXMcxbQ922TCLdQcFkHnBVZVHPbV7JrCHvP8O-BriHFR4T7rwMwrrlv4QuEovUFRfIDEQU3AhuYh3O-FH8iIBzSqb2T27sOt7mYbJWjCirAR4ctbO3PtxJkV08zmMdjw50O_Q");'></div>
+                        </div>
                     </div>
                 </div>
-            </article>
+            </section>
+
+            <section class="bg-gray-50 py-16">
+                <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
+                    <h2 class="text-3xl font-extrabold text-gray-900">İşletmenizin İmajını Yenileyin!</h2>
+                    <p class="mt-4 text-lg text-gray-600">Marka kimliğinizi yansıtan profesyonel boya çözümleri için bizimle iletişime geçin.</p>
+                    <a href="iletisim.html" class="mt-8 inline-flex items-center justify-center rounded-lg bg-[var(--primary-600)] px-8 py-3 text-base font-bold text-white shadow-lg transition-transform hover:scale-105">Ücretsiz Keşif ve Teklif Alın</a>
+                </div>
+            </section>
         </main>
 
         <footer class="bg-[var(--secondary-900)] text-white">
