--- a/ic-cephe-boyama.html
+++ b/ic-cephe-boyama.html
@@ -6,8 +6,8 @@
     <link crossorigin="" href="https://fonts.gstatic.com/" rel="preconnect" />
     <link as="style" href="https://fonts.googleapis.com/css2?display=swap&amp;family=Lexend%3Awght%40400%3B500%3B700%3B900&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900" onload="this.rel='stylesheet'" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <title>2025 Yılının Gözde Duvar Renkleri - İstanbul Boyacınız Blog</title>
-    <meta name="description" content="Bu yılın trend renkleriyle evinize modern bir dokunuş katın. Doğadan ilham alan tonlar ve cesur renkler ön planda.">
+    <title>İç Cephe Boyama - İstanbul Boyacınız</title>
+    <meta name="description" content="Evinizin veya ofisinizin atmosferini değiştirmek için profesyonel iç cephe boyama hizmeti. Kaliteli malzemeler ve titiz işçilikle mekanlarınızı yeniliyoruz.">
     <link href="img/Logo.png" rel="icon" type="image/png">
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <style type="text/tailwindcss">
@@ -68,25 +68,48 @@
         </div>
 
         <main id="main-content" class="flex-grow">
-            <article class="py-16 sm:py-24 bg-white">
-                <div class="max-w-3xl mx-auto px-4 sm:px-6 lg:px-8">
-                    <a href="blog.html" class="text-[var(--primary-600)] font-semibold hover:underline">&larr; Blog'a Geri Dön</a>
-                    <h1 class="mt-4 text-4xl md:text-5xl font-black text-gray-900">2025 Yılının Gözde Duvar Renkleri</h1>
-                    <p class="mt-4 text-lg text-gray-500">Yayınlanma Tarihi: 1 Ağustos 2025</p>
-                    <div class="mt-8 h-96 w-full bg-cover bg-center rounded-lg shadow-lg" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCWbLxa4eUWJscCEUewVmDbTRmBw9lnUWJTxgvyvKMUjRR3HEnYbNVzpgbqEhlyrS_wgz_09qpoH8fQdku9obfEAjK7fMpW7JLgScprEK1B-hc9mZRyBQefFljQF25JPTM9NFJvC6VAzdJKPW53SczjsWyXeywxA792dB-QtyZFGePMgeFf_wSP-burswp491pA47Jn-ct57nKmwXPyXVdN2Wfzar2k-bfgV1pa0IEqtUOX0L_zHG8l4D5n53wAYmi4lV9AYTXkx8o");' role="img" aria-label="2025 yılı trend renklerini yansıtan modern ve şık bir oda"></div>
-                    <div class="mt-8 prose prose-lg max-w-none text-gray-700">
-                        <p>Bu yılın trend renkleriyle evinize modern bir dokunuş katın. 2025, doğallığın ve sakinliğin ön planda olduğu bir yıl olacak. Duvarlarınızda kullanacağınız renklerle sadece bir odayı değil, tüm yaşam alanınızın enerjisini değiştirebilirsiniz.</p>
-                        <p>İşte bu yılın öne çıkan renk paletleri:</p>
-                        <h2>1. Toprak Tonları ve Sıcak Nötrler</h2>
-                        <p>Bej, krem, terakota ve yanık turuncu gibi renkler, mekanlara sıcaklık ve samimiyet katıyor. Bu tonlar, özellikle ahşap mobilyalar ve doğal tekstillerle birleştiğinde huzurlu ve davetkar bir atmosfer yaratır. Minimalist ve bohem dekorasyon stilleri için mükemmel bir zemin oluştururlar.</p>
-                        <h2>2. Doğadan İlham Alan Yeşiller</h2>
-                        <p>Adaçayı yeşili, zeytin yeşili ve nane tonları, doğayı evinize taşımanın en zarif yollarından biri. Bu renkler, stresi azaltıcı ve sakinleştirici etkileriyle bilinir. Özellikle yatak odaları ve çalışma alanları için idealdir. Beyaz, gri ve açık ahşap renkleriyle harika bir uyum yakalarlar.</p>
-                        <h2>3. Cesur ve Derin Maviler</h2>
-                        <p>Gece mavisi ve lacivert gibi derin tonlar, mekanlara sofistike ve asil bir hava katıyor. Özellikle tek bir duvarı vurgulamak (accent wall) için kullanıldığında dramatik bir etki yaratır. Altın veya pirinç detaylarla birleştiğinde lüks bir görünüm elde edebilirsiniz.</p>
-                        <p>Unutmayın, renk seçimi kişisel bir zevktir. Ancak bu trendler, evinize yeni bir soluk getirmek için size ilham verebilir. Hangi rengin sizin için doğru olduğuna karar veremiyorsanız, profesyonel ekibimizden ücretsiz renk danışmanlığı alabilirsiniz.</p>
+            <section class="bg-cover bg-center py-20 md:py-32" style='background-image: linear-gradient(rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0.8) 100%), url("https://lh3.googleusercontent.com/aida-public/AB6AXuCWbLxa4eUWJscCEUewVmDbTRmBw9lnUWJTxgvyvKMUjRR3HEnYbNVzpgbqEhlyrS_wgz_09qpoH8fQdku9obfEAjK7fMpW7JLgScprEK1B-hc9mZRyBQefFljQF25JPTM9NFJvC6VAzdJKPW53SczjsWyXeywxA792dB-QtyZFGePMgeFf_wSP-burswp491pA47Jn-ct57nKmwXPyXVdN2Wfzar2k-bfgV1pa0IEqtUOX0L_zHG8l4D5n53wAYmi4lV9AYTXkx8o");'>
+                <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center text-white">
+                    <h1 class="text-4xl md:text-6xl font-black">İç Cephe Boyama</h1>
+                    <p class="mt-4 text-lg md:text-xl font-light">Yaşam alanlarınızı uzmanlıkla dönüştürüyoruz.</p>
+                </div>
+            </section>
+
+            <section id="hizmet-detaylari" class="py-16 sm:py-24 bg-white">
+                <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+                    <div class="grid grid-cols-1 lg:grid-cols-3 gap-12">
+                        <div class="lg:col-span-2">
+                            <div class="prose prose-lg max-w-none text-gray-700">
+                                <p class="lead">Evinizin veya ofisinizin atmosferini değiştirmenin en hızlı ve en etkili yolu profesyonel bir iç cephe boya uygulamasıdır. Doğru renkler ve kaliteli işçilikle, mekanlarınıza yepyeni bir kimlik kazandırıyor, yaşam alanlarınızı daha aydınlık, ferah ve davetkar hale getiriyoruz.</p>
+                                
+                                <h3>İç Cephe Boyama Sürecimiz Nasıl İşler?</h3>
+                                <p>Mükemmel sonuca ulaşmak için titizlikle takip ettiğimiz adımlar şunlardır:</p>
+                                <ol>
+                                    <li><strong>Ücretsiz Keşif ve Danışmanlık:</strong> Mekanınızı ziyaret ederek duvarların durumunu inceler, ihtiyaçlarınızı dinler ve size en uygun renk ve boya türleri konusunda profesyonel danışmanlık sunarız.</li>
+                                    <li><strong>Eşya ve Zemin Koruması:</strong> Çalışmaya başlamadan önce tüm eşyalarınızı ve zeminlerinizi özel koruyucu örtülerle dikkatlice kaplayarak boya sıçramalarına karşı tam koruma sağlarız.</li>
+                                    <li><strong>Yüzey Hazırlığı:</strong> Duvarlardaki küçük çatlak ve delikleri özel macunlarla onarır, pürüzsüz bir yüzey elde etmek için zımparalama işlemi yapar ve en iyi yapışmayı sağlamak için astar uygularız.</li>
+                                    <li><strong>Profesyonel Boya Uygulaması:</strong> Belirlenen renklerdeki yüksek kaliteli boyaları, dalgalanma ve iz bırakmayacak şekilde, en az iki kat olarak profesyonel ekipmanlarımızla uygularız.</li>
+                                    <li><strong>Son Kontrol ve Temizlik:</strong> Boya işlemi bittikten sonra koruma örtülerini kaldırır, detaylı bir temizlik yapar ve işi size tertemiz bir şekilde teslim ederiz.</li>
+                                </ol>
+
+                                <h3>Neden İstanbul Boyacınız?</h3>
+                                <p>Biz sadece duvarları boyamıyoruz; mekanlarınıza değer katıyoruz. Kaliteli malzeme kullanımı, zamanında teslimat garantisi ve müşteri memnuniyeti odaklı hizmet anlayışımızla, boya badana sürecini sizin için stressiz ve keyifli bir deneyime dönüştürüyoruz.</p>
+                            </div>
+                        </div>
+                        <div class="h-96 lg:h-auto rounded-lg overflow-hidden shadow-xl">
+                            <div class="h-full w-full bg-cover bg-center" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCWbLxa4eUWJscCEUewVmDbTRmBw9lnUWJTxgvyvKMUjRR3HEnYbNVzpgbqEhlyrS_wgz_09qpoH8fQdku9obfEAjK7fMpW7JLgScprEK1B-hc9mZRyBQefFljQF25JPTM9NFJvC6VAzdJKPW53SczjsWyXeywxA792dB-QtyZFGePMgeFf_wSP-burswp491pA47Jn-ct57nKmwXPyXVdN2Wfzar2k-bfgV1pa0IEqtUOX0L_zHG8l4D5n53wAYmi4lV9AYTXkx8o");'></div>
+                        </div>
                     </div>
                 </div>
-            </article>
+            </section>
+
+            <section class="bg-gray-50 py-16">
+                <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
+                    <h2 class="text-3xl font-extrabold text-gray-900">Hayalinizdeki Renklere Kavuşun!</h2>
+                    <p class="mt-4 text-lg text-gray-600">Evinize veya ofisinize yeni bir soluk getirmek için daha fazla beklemeyin.</p>
+                    <a href="iletisim.html" class="mt-8 inline-flex items-center justify-center rounded-lg bg-[var(--primary-600)] px-8 py-3 text-base font-bold text-white shadow-lg transition-transform hover:scale-105">Ücretsiz Keşif ve Teklif Alın</a>
+                </div>
+            </section>
         </main>
 
         <footer class="bg-[var(--secondary-900)] text-white">
