--- a/iletisim.html
+++ b/iletisim.html
@@ -29,11 +29,31 @@
                 <a href="index.html"><img src="img/Logo.png" alt="İstanbul Boyacınız Logosu" class="h-24 md:h-28"></a>
                 <div class="hidden md:flex items-center gap-8 text-gray-700">
                     <a class="hover:text-[var(--primary-600)] transition-colors" href="index.html">Anasayfa</a>
-                    <a class="hover:text-[var(--primary-600)] transition-colors" href="hizmetler.html">Hizmetlerimiz</a>
+                    <div class="relative group">
+                        <a class="hover:text-[var(--primary-600)] transition-colors flex items-center gap-1" href="hizmetler.html">
+                            Hizmetlerimiz
+                            <span class="material-icons text-base transition-transform duration-300 group-hover:rotate-180">expand_more</span>
+                        </a>
+                        <div class="absolute top-full left-1/2 -translate-x-1/2 w-56 bg-white rounded-md shadow-lg opacity-0 group-hover:opacity-100 transition-opacity duration-300 pointer-events-none group-hover:pointer-events-auto">
+                            <div class="py-2">
+                                <a href="ic-cephe-boyama.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-[var(--primary-600)]">İç Cephe Boyama</a>
+                                <a href="dis-cephe-boyama.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-[var(--primary-600)]">Dış Cephe Boyama</a>
+                                <a href="ticari-boyama.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-[var(--primary-600)]">Ticari Boyama</a>
+                            </div>
+                        </div>
+                    </div>
+                    <a class="hover:text-[var(--primary-600)] transition-colors" href="hakkimizda.html">Hakkımızda</a>
+                    <a class="hover:text-[var(--primary-600)] transition-colors" href="galeri.html">Galerimiz</a>
                     <a class="hover:text-[var(--primary-600)] transition-colors" href="blog.html">Blog</a>
                     <a class="hover:text-[var(--primary-600)] transition-colors" href="iletisim.html">İletişim</a>
                 </div>
-                <button id="menu-button" class="md:hidden text-gray-700 z-50"><span class="material-icons text-3xl">menu</span></button>
+                <a href="tel:+905387410140" class="hidden lg:flex items-center gap-2 bg-blue-100 text-blue-800 px-4 py-2 rounded-lg font-bold hover:bg-blue-200 transition-colors">
+                    <span class="material-icons">phone</span>
+                    +90 538 741 01 40
+                </a>
+                <button id="menu-button" class="md:hidden text-gray-700 z-50">
+                    <span class="material-icons text-3xl">menu</span>
+                </button>
             </nav>
         </header>
 
@@ -56,71 +76,43 @@
             </section>
 
             <section class="py-16 sm:py-24 bg-white">
-                <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 grid grid-cols-1 md:grid-cols-2 gap-16">
-                    
-                    <div>
-                        <h2 class="text-3xl font-extrabold text-gray-900">İletişim Formu</h2>
-                        <form action="#" method="POST" class="mt-8 space-y-6">
-                            <div>
-                                <label for="name" class="sr-only">Adınız Soyadınız</label>
-                                <input type="text" name="name" id="name" autocomplete="name" required class="block w-full rounded-md border-gray-300 py-3 px-4 shadow-sm focus:border-red-500 focus:ring-red-500" placeholder="Adınız Soyadınız">
-                            </div>
-                            <div>
-                                <label for="email" class="sr-only">E-posta Adresiniz</label>
-                                <input type="email" name="email" id="email" autocomplete="email" required class="block w-full rounded-md border-gray-300 py-3 px-4 shadow-sm focus:border-red-500 focus:ring-red-500" placeholder="E-posta Adresiniz">
-                            </div>
-                             <div>
-                                <label for="phone" class="sr-only">Telefon Numaranız</label>
-                                <input type="tel" name="phone" id="phone" autocomplete="tel" class="block w-full rounded-md border-gray-300 py-3 px-4 shadow-sm focus:border-red-500 focus:ring-red-500" placeholder="Telefon Numaranız (İsteğe Bağlı)">
-                            </div>
-                            <div>
-                                <label for="message" class="sr-only">Mesajınız</label>
-                                <textarea name="message" id="message" rows="6" required class="block w-full rounded-md border-gray-300 py-3 px-4 shadow-sm focus:border-red-500 focus:ring-red-500" placeholder="Mesajınız"></textarea>
-                            </div>
-                            <div>
-                                <button type="submit" class="inline-flex justify-center rounded-lg border border-transparent bg-red-600 py-3 px-8 text-base font-medium text-white shadow-sm hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2">Mesajı Gönder</button>
-                            </div>
-                        </form>
-                    </div>
-
-                    <div class="bg-gray-50 p-8 rounded-lg">
-                        <h3 class="text-2xl font-bold text-gray-900">İletişim Bilgileri</h3>
-                        <div class="mt-6 space-y-6 text-lg text-gray-600">
-                            <p class="flex items-start">
-                                <span class="material-icons text-red-600 mt-1 mr-4">location_on</span>
+                <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
+                    <div class="bg-gray-50 p-8 rounded-lg shadow-md">
+                        <h3 class="text-3xl font-bold text-gray-900 text-center">İletişim Bilgilerimiz</h3>
+                        <div class="mt-8 space-y-8 text-lg text-gray-600">
+                            <p class="flex items-center">
+                                <span class="material-icons text-red-600 text-3xl mr-4">location_on</span>
                                 <span>
                                     <strong class="block text-gray-800">Adres:</strong>
                                     Örnek Mah. Boya Sok. No:123, Kat:4 D:5, Kadıköy/İstanbul
                                 </span>
                             </p>
-                            <p class="flex items-start">
-                                <span class="material-icons text-red-600 mt-1 mr-4">phone</span>
+                            <p class="flex items-center">
+                                <span class="material-icons text-red-600 text-3xl mr-4">phone</span>
                                 <span>
-                                    <strong class="block text-gray-800">Telefon:</strong>
-                                    <a href="tel:+905555555555" class="hover:text-red-600">+90 555 555 55 55</a>
+                                    <strong class="block text-gray-800">Telefon & WhatsApp:</strong>
+                                    <a href="tel:+905387410140" class="hover:text-red-600">+90 555 555 55 55</a>
                                 </span>
                             </p>
-                            <p class="flex items-start">
-                                <span class="material-icons text-red-600 mt-1 mr-4">email</span>
+                            <p class="flex items-center">
+                                <span class="material-icons text-red-600 text-3xl mr-4">email</span>
                                 <span>
                                     <strong class="block text-gray-800">E-posta:</strong>
                                     <a href="mailto:info@istanbulboyaciniz.com" class="hover:text-red-600">info@istanbulboyaciniz.com</a>
                                 </span>
                             </p>
-                             <p class="flex items-start">
-                                <span class="material-icons text-red-600 mt-1 mr-4">schedule</span>
+                             <p class="flex items-center">
+                                <span class="material-icons text-red-600 text-3xl mr-4">schedule</span>
                                 <span>
                                     <strong class="block text-gray-800">Çalışma Saatleri:</strong>
-                                    Hafta İçi: 09:00 - 19:00<br>
-                                    Cumartesi: 10:00 - 17:00
+                                    Haftanın 7 Günü, 08:00 - 22:00 arası hizmetinizdeyiz.
                                 </span>
                             </p>
                         </div>
-                        <div class="mt-8 h-64 w-full bg-gray-300 rounded-lg overflow-hidden">
+                        <div class="mt-8 h-80 w-full bg-gray-300 rounded-lg overflow-hidden">
                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3010.752694834514!2d29.02250407668913!3d41.00823797135033!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cab9e898a1c1a7%3A0x4c0f73b28d4b1f5!2s%C4%B0stanbul!5e0!3m2!1str!2str!4v1722268901698!5m2!1str!2str" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
-
                 </div>
             </section>
         </main>
@@ -130,48 +122,62 @@
                 <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                     <div>
                         <h3 class="text-lg font-semibold">İstanbul Boyacınız</h3>
-                        <p class="mt-4 text-sm text-[var(--secondary-300)]">Mekanlarınızı profesyonel dokunuşlarla renklendiriyor, hayallerinizdeki yaşam alanlarını gerçeğe dönüştürüyoruz.</p>
+                        <p class="mt-4 text-sm text-[var(--secondary-300)]">Mekanlarınızı profesyonel dokunuşlarla
+                            renklendiriyor, hayallerinizdeki yaşam alanlarını gerçeğe dönüştürüyoruz.</p>
                     </div>
                     <div>
                         <h3 class="text-sm font-semibold tracking-wider uppercase">Site Haritası</h3>
                         <ul class="mt-4 space-y-3">
-                            <li><a class="text-sm text-[var(--secondary-300)] hover:text-white transition-colors" href="index.html">Anasayfa</a></li>
-                            <li><a class="text-sm text-[var(--secondary-300)] hover:text-white transition-colors" href="hizmetler.html">Hizmetlerimiz</a></li>
-                            <li><a class="text-sm text-[var(--secondary-300)] hover:text-white transition-colors" href="blog.html">Blog</a></li>
-                            <li><a class="text-sm text-[var(--secondary-300)] hover:text-white transition-colors" href="iletisim.html">İletişim</a></li>
+                            <li><a class="text-sm text-[var(--secondary-300)] hover:text-white transition-colors"
+                                    href="index.html">Anasayfa</a></li>
+                            <li><a class="text-sm text-[var(--secondary-300)] hover:text-white transition-colors"
+                                    href="hizmetler.html">Hizmetlerimiz</a></li>
+                            <li><a class="text-sm text-[var(--secondary-300)] hover:text-white transition-colors"
+                                    href="hakkimizda.html">Hakkımızda</a></li>
+                            <li><a class="text-sm text-[var(--secondary-300)] hover:text-white transition-colors"
+                                    href="galeri.html">Galerimiz</a></li>
+                            <li><a class="text-sm text-[var(--secondary-300)] hover:text-white transition-colors"
+                                    href="blog.html">Blog</a></li>
+                            <li><a class="text-sm text-[var(--secondary-300)] hover:text-white transition-colors"
+                                    href="iletisim.html">İletişim</a></li>
                         </ul>
                     </div>
                     <div>
                         <h3 class="text-sm font-semibold tracking-wider uppercase">Başlıca Hizmetler</h3>
                         <ul class="mt-4 space-y-3">
-                            <li><a class="text-sm text-[var(--secondary-300)] hover:text-white transition-colors" href="hizmetler.html">İç Cephe Boyama</a></li>
-                            <li><a class="text-sm text-[var(--secondary-300)] hover:text-white transition-colors" href="hizmetler.html">Dış Cephe Boyama</a></li>
-                            <li><a class="text-sm text-[var(--secondary-300)] hover:text-white transition-colors" href="hizmetler.html">Ticari Alan Boyama</a></li>
+                            <li><a class="text-sm text-[var(--secondary-300)] hover:text-white transition-colors"
+                                    href="ic-cephe-boyama.html">İç Cephe Boyama</a></li>
+                            <li><a class="text-sm text-[var(--secondary-300)] hover:text-white transition-colors"
+                                    href="dis-cephe-boyama.html">Dış Cephe Boyama</a></li>
+                            <li><a class="text-sm text-[var(--secondary-300)] hover:text-white transition-colors"
+                                    href="ticari-boyama.html">Ticari Alan Boyama</a></li>
                         </ul>
                     </div>
                     <div>
                         <h3 class="text-sm font-semibold tracking-wider uppercase">Bize Ulaşın</h3>
                         <ul class="mt-4 space-y-3 text-sm text-[var(--secondary-300)]">
-                            <li class="flex items-start"><span class="material-icons text-lg mr-2 mt-1">location_on</span><span>Kadıköy/İstanbul</span></li>
-                            <li class="flex items-start"><span class="material-icons text-lg mr-2 mt-1">phone</span><a href="tel:+905555555555" class="hover:text-white transition-colors">+90 555 555 55 55</a></li>
-                            <li class="flex items-start"><span class="material-icons text-lg mr-2 mt-1">email</span><a href="mailto:info@istanbulboyaciniz.com" class="hover:text-white transition-colors">info@istanbulboyaciniz.com</a></li>
+                            <li class="flex items-start"><span
+                                    class="material-icons text-lg mr-2 mt-1">location_on</span><span>Kadıköy/İstanbul</span>
+                            </li>
+                            <li class="flex items-start"><span class="material-icons text-lg mr-2 mt-1">phone</span><a
+                                    href="tel:+905387410140" class="hover:text-white transition-colors">+90 555 555 55
+                                    55</a></li>
+                            <li class="flex items-start"><span class="material-icons text-lg mr-2 mt-1">email</span><a
+                                    href="mailto:info@istanbulboyaciniz.com"
+                                    class="hover:text-white transition-colors">info@istanbulboyaciniz.com</a></li>
                         </ul>
-                        <div class="mt-6 flex space-x-4">
-                            <a class="text-[var(--secondary-300)] hover:text-white" href="#"><span class="sr-only">Facebook</span><span class="material-icons">facebook</span></a>
-                            <a class="text-[var(--secondary-300)] hover:text-white" href="#"><span class="sr-only">Instagram</span><span class="material-icons">photo_camera</span></a>
-                            <a class="text-[var(--secondary-300)] hover:text-white" href="#"><span class="sr-only">Twitter</span><span class="material-icons">flutter_dash</span></a>
-                        </div>
                     </div>
                 </div>
-                <div class="mt-12 border-t border-[var(--secondary-800)] pt-8 text-center text-sm text-[var(--secondary-400)]">
+                <div
+                    class="mt-12 border-t border-[var(--secondary-800)] pt-8 text-center text-sm text-[var(--secondary-400)]">
                     <p>© 2025 İstanbul Boyacınız. Tüm hakları saklıdır.</p>
                 </div>
             </div>
         </footer>
 
         <div class="fixed bottom-4 right-4 z-20 flex flex-col gap-3">
-            <a href="https://wa.me/905555555555" target="_blank" class="flex h-14 w-14 items-center justify-center rounded-full bg-green-500 text-white shadow-lg transition-transform hover:scale-110"><span class="material-icons text-3xl">whatsapp</span></a>
-            <a href="tel:+905555555555" class="flex h-14 w-14 items-center justify-center rounded-full bg-[var(--primary-600)] text-white shadow-lg transition-transform hover:scale-110"><span class="material-icons text-3xl">phone</span></a>
+            <a href="https://wa.me/905387410140" target="_blank" class="flex h-14 w-14 items-center justify-center rounded-full bg-green-500 text-white shadow-lg transition-transform hover:scale-110"><span class="material-icons text-3xl">whatsapp</span></a>
+            <a href="tel:+905387410140" class="flex h-14 w-14 items-center justify-center rounded-full bg-[var(--primary-600)] text-white shadow-lg transition-transform hover:scale-110"><span class="material-icons text-3xl">phone</span></a>
         </div>
     </div>
 
