--- a/index.html
+++ b/index.html
@@ -3,15 +3,7 @@
 
 <head>
     <!-- Google Tag Manager -->
-    <script>(function (w, d, s, l, i) {
-            w[l] = w[l] || []; w[l].push({
-                'gtm.start':
-                    new Date().getTime(), event: 'gtm.js'
-            }); var f = d.getElementsByTagName(s)[0],
-                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-        })(window, document, 'script', 'dataLayer', 'GTM-MDTVQVPN');</script>
-    <!-- End Google Tag Manager -->
+  
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link crossorigin="" href="https://fonts.gstatic.com/" rel="preconnect" />
@@ -86,6 +78,49 @@
             to { transform: translateY(0); }
         }
     </style>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "PaintingService",
+      "name": "İstanbul Boyacınız",
+      "image": "https://www.istanbulboyaciniz.com/img/Logo.png",
+      "@id": "",
+      "url": "https://www.istanbulboyaciniz.com",
+      "telephone": "+90-555-555-55-55",
+      "priceRange": "₺₺",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Örnek Mah. Atatürk Cad. No:123",
+        "addressLocality": "Kadıköy",
+        "addressRegion": "İstanbul",
+        "postalCode": "34710",
+        "addressCountry": "TR"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 40.9832,
+        "longitude": 29.0222
+      },
+      "openingHoursSpecification": {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": [
+          "Monday",
+          "Tuesday",
+          "Wednesday",
+          "Thursday",
+          "Friday",
+          "Saturday",
+          "Sunday"
+        ],
+        "opens": "08:00",
+        "closes": "22:00"
+      },
+      "sameAs": [
+        "https://www.facebook.com/istanbulboyaciniz",
+        "https://www.instagram.com/istanbulboyaciniz"
+      ] 
+    }
+    </script>
 </head>
 
 <body class="bg-white">
@@ -102,10 +137,28 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </a>
                 <div class="hidden md:flex items-center gap-8 text-gray-700">
                     <a class="hover:text-[var(--primary-600)] transition-colors" href="index.html">Anasayfa</a>
-                    <a class="hover:text-[var(--primary-600)] transition-colors" href="hizmetler.html">Hizmetlerimiz</a>
+                    <div class="relative group">
+                        <a class="hover:text-[var(--primary-600)] transition-colors flex items-center gap-1" href="hizmetler.html">
+                            Hizmetlerimiz
+                            <span class="material-icons text-base transition-transform duration-300 group-hover:rotate-180">expand_more</span>
+                        </a>
+                        <div class="absolute top-full left-1/2 -translate-x-1/2 w-56 bg-white rounded-md shadow-lg opacity-0 group-hover:opacity-100 transition-opacity duration-300 pointer-events-none group-hover:pointer-events-auto">
+                            <div class="py-2">
+                                <a href="ic-cephe-boyama.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-[var(--primary-600)]">İç Cephe Boyama</a>
+                                <a href="dis-cephe-boyama.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-[var(--primary-600)]">Dış Cephe Boyama</a>
+                                <a href="ticari-boyama.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-[var(--primary-600)]">Ticari Boyama</a>
+                            </div>
+                        </div>
+                    </div>
+                    <a class="hover:text-[var(--primary-600)] transition-colors" href="hakkimizda.html">Hakkımızda</a>
+                    <a class="hover:text-[var(--primary-600)] transition-colors" href="galeri.html">Galerimiz</a>
                     <a class="hover:text-[var(--primary-600)] transition-colors" href="blog.html">Blog</a>
                     <a class="hover:text-[var(--primary-600)] transition-colors" href="iletisim.html">İletişim</a>
                 </div>
+                <a href="tel:+905387410140" class="hidden lg:flex items-center gap-2 bg-blue-100 text-blue-800 px-4 py-2 rounded-lg font-bold hover:bg-blue-200 transition-colors">
+                    <span class="material-icons">phone</span>
+                    +90 538 741 01 40
+                </a>
                 <button id="menu-button" class="md:hidden text-gray-700 z-50">
                     <span class="material-icons text-3xl">menu</span>
                 </button>
@@ -136,7 +189,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <h1 class="text-4xl font-black leading-tight tracking-tighter md:text-6xl">Mekanlarınızı Renklerle
                         Yeniden Hayal Edin</h1>
                     <p class="mt-4 text-lg font-light md:text-xl">Profesyonel, Temiz ve Güvenilir Boya Çözümleri</p>
-                    <a href="#hizmetler"
+                    <a href="tel:+905387410140"
                         class="mt-8 inline-flex items-center justify-center rounded-lg bg-[var(--primary-600)] px-8 py-3 text-base font-bold text-white shadow-lg transition-transform hover:scale-105">Hizmetlerimizi
                         Keşfedin</a>
                 </div>
@@ -150,7 +203,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             boya hizmetleri yelpazesi sunuyoruz.</p>
                     </div>
                     <div class="mt-12 grid grid-cols-1 gap-8 sm:grid-cols-2 lg:grid-cols-3">
-                        <div class="pt-6">
+                        <a href="ic-cephe-boyama.html" class="block pt-6">
                             <div
                                 class="flow-root rounded-lg bg-white px-6 pb-8 shadow-md transition-transform hover:-translate-y-2 h-full">
                                 <div class="-mt-6">
@@ -163,8 +216,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                         mekanlarını uzman dokunuşlarla dönüştürüyoruz.</p>
                                 </div>
                             </div>
-                        </div>
-                        <div class="pt-6">
+                        </a>
+                        <a href="dis-cephe-boyama.html" class="block pt-6">
                             <div
                                 class="flow-root rounded-lg bg-white px-6 pb-8 shadow-md transition-transform hover:-translate-y-2 h-full">
                                 <div class="-mt-6">
@@ -177,8 +230,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                         koşullarına dayanıklı, estetik boyalarla yeniliyoruz.</p>
                                 </div>
                             </div>
-                        </div>
-                        <div class="pt-6">
+                        </a>
+                        <a href="ticari-boyama.html" class="block pt-6">
                             <div
                                 class="flow-root rounded-lg bg-white px-6 pb-8 shadow-md transition-transform hover:-translate-y-2 h-full">
                                 <div class="-mt-6">
@@ -191,7 +244,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                         için hızlı, verimli ve profesyonel boya çözümleri sunuyoruz.</p>
                                 </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </section>
@@ -243,17 +296,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="mt-12 grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-3">
                         <div class="group relative overflow-hidden rounded-lg shadow-lg">
                             <div class="h-64 w-full bg-cover bg-center transition-transform duration-500 group-hover:scale-110"
-                                style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCWbLxa4eUWJscCEUewVmDbTRmBw9lnUWJTxgvyvKMUjRR3HEnYbNVzpgbqEhlyrS_wgz_09qpoH8fQdku9obfEAjK7fMpW7JLgScprEK1B-hc9mZRyBQefFljQF25JPTM9NFJvC6VAzdJKPW53SczjsWyXeywxA792dB-QtyZFGePMgeFf_wSP-burswp491pA47Jn-ct57nKmwXPyXVdN2Wfzar2k-bfgV1pa0IEqtUOX0L_zHG8l4D5n53wAYmi4lV9AYTXkx8o");'>
+                                style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCWbLxa4eUWJscCEUewVmDbTRmBw9lnUWJTxgvyvKMUjRR3HEnYbNVzpgbqEhlyrS_wgz_09qpoH8fQdku9obfEAjK7fMpW7JLgScprEK1B-hc9mZRyBQefFljQF25JPTM9NFJvC6VAzdJKPW53SczjsWyXeywxA792dB-QtyZFGePMgeFf_wSP-burswp491pA47Jn-ct57nKmwXPyXVdN2Wfzar2k-bfgV1pa0IEqtUOX0L_zHG8l4D5n53wAYmi4lV9AYTXkx8o");'
+                                role="img" aria-label="Modern bir oturma odasının profesyonelce boyanmış duvarları">
                             </div>
                         </div>
                         <div class="group relative overflow-hidden rounded-lg shadow-lg">
                             <div class="h-64 w-full bg-cover bg-center transition-transform duration-500 group-hover:scale-110"
-                                style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBlowHjSZOOmamVQaj4TDVCZczKe7H-uCx1rfGK-ZvJHVIDYuVVeP4byI66btNyPT2_F0JTjqAs1xs6Nv_KNYD7LMWch0hFIlXd7kSoaNGmQZoizTT2n9R7lMTRNGgcuyJoIxEUzIwqsZuSCeU7TWgOeOZOy0i6cs8EeEemHCuXE18JsjiMDGeWtmOusZPJyqziEGPeMlh_mQMcnRuXlj_yJFEcev5UCtYtHnYEGdDXMk0RARO9gS-93sQwqX-y3PwA9sKT0c6SCgY");'>
+                                style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBlowHjSZOOmamVQaj4TDVCZczKe7H-uCx1rfGK-ZvJHVIDYuVVeP4byI66btNyPT2_F0JTjqAs1xs6Nv_KNYD7LMWch0hFIlXd7kSoaNGmQZoizTT2n9R7lMTRNGgcuyJoIxEUzIwqsZuSCeU7TWgOeOZOy0i6cs8EeEemHCuXE18JsjiMDGeWtmOusZPJyqziEGPeMlh_mQMcnRuXlj_yJFEcev5UCtYtHnYEGdDXMk0RARO9gS-93sQwqX-y3PwA9sKT0c6SCgY");'
+                                role="img" aria-label="Yenilenmiş ve boyanmış bir evin dış cephesi">
                             </div>
                         </div>
                         <div class="group relative overflow-hidden rounded-lg shadow-lg">
                             <div class="h-64 w-full bg-cover bg-center transition-transform duration-500 group-hover:scale-110"
-                                style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuC7E-2FSV2k94bVs7jAudwqaiw1I50vhxX9KbPQI9_Jf1qt2Cy7S95uFmslJD7dlmmC2xn_f0Xap8AtV1HGKU2KutLRnnKUz_kq0XXpj9GMYqiDLQx-zObG-nFdZFH4HpGtTNLzI5cXMcxbQ922TCLdQcFkHnBVZVHPbV7JrCHvP8O-BriHFR4T7rwMwrrlv4QuEovUFRfIDEQU3AhuYh3O-FH8iIBzSqb2T27sOt7mYbJWjCirAR4ctbO3PtxJkV08zmMdjw50O_Q");'>
+                                style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuC7E-2FSV2k94bVs7jAudwqaiw1I50vhxX9KbPQI9_Jf1qt2Cy7S95uFmslJD7dlmmC2xn_f0Xap8AtV1HGKU2KutLRnnKUz_kq0XXpj9GMYqiDLQx-zObG-nFdZFH4HpGtTNLzI5cXMcxbQ922TCLdQcFkHnBVZVHPbV7JrCHvP8O-BriHFR4T7rwMwrrlv4QuEovUFRfIDEQU3AhuYh3O-FH8iIBzSqb2T27sOt7mYbJWjCirAR4ctbO3PtxJkV08zmMdjw50O_Q");'
+                                role="img" aria-label="Profesyonelce boyanmış aydınlık bir ofis ortamı">
                             </div>
                         </div>
                     </div>
@@ -328,6 +384,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <li><a class="text-sm text-[var(--secondary-300)] hover:text-white transition-colors"
                                     href="hizmetler.html">Hizmetlerimiz</a></li>
                             <li><a class="text-sm text-[var(--secondary-300)] hover:text-white transition-colors"
+                                    href="hakkimizda.html">Hakkımızda</a></li>
+                            <li><a class="text-sm text-[var(--secondary-300)] hover:text-white transition-colors"
+                                    href="galeri.html">Galerimiz</a></li>
+                            <li><a class="text-sm text-[var(--secondary-300)] hover:text-white transition-colors"
                                     href="blog.html">Blog</a></li>
                             <li><a class="text-sm text-[var(--secondary-300)] hover:text-white transition-colors"
                                     href="iletisim.html">İletişim</a></li>
@@ -337,11 +397,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <h3 class="text-sm font-semibold tracking-wider uppercase">Başlıca Hizmetler</h3>
                         <ul class="mt-4 space-y-3">
                             <li><a class="text-sm text-[var(--secondary-300)] hover:text-white transition-colors"
-                                    href="hizmetler.html">İç Cephe Boyama</a></li>
+                                    href="ic-cephe-boyama.html">İç Cephe Boyama</a></li>
                             <li><a class="text-sm text-[var(--secondary-300)] hover:text-white transition-colors"
-                                    href="hizmetler.html">Dış Cephe Boyama</a></li>
+                                    href="dis-cephe-boyama.html">Dış Cephe Boyama</a></li>
                             <li><a class="text-sm text-[var(--secondary-300)] hover:text-white transition-colors"
-                                    href="hizmetler.html">Ticari Alan Boyama</a></li>
+                                    href="ticari-boyama.html">Ticari Alan Boyama</a></li>
                         </ul>
                     </div>
                     <div>
@@ -351,20 +411,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     class="material-icons text-lg mr-2 mt-1">location_on</span><span>Kadıköy/İstanbul</span>
                             </li>
                             <li class="flex items-start"><span class="material-icons text-lg mr-2 mt-1">phone</span><a
-                                    href="tel:+905555555555" class="hover:text-white transition-colors">+90 555 555 55
+                                    href="tel:+905387410140" class="hover:text-white transition-colors">+90 555 555 55
                                     55</a></li>
                             <li class="flex items-start"><span class="material-icons text-lg mr-2 mt-1">email</span><a
                                     href="mailto:info@istanbulboyaciniz.com"
                                     class="hover:text-white transition-colors">info@istanbulboyaciniz.com</a></li>
                         </ul>
-                        <div class="mt-6 flex space-x-4">
-                            <a class="text-[var(--secondary-300)] hover:text-white" href="#"><span
-                                    class="sr-only">Facebook</span><span class="material-icons">facebook</span></a>
-                            <a class="text-[var(--secondary-300)] hover:text-white" href="#"><span
-                                    class="sr-only">Instagram</span><span class="material-icons">photo_camera</span></a>
-                            <a class="text-[var(--secondary-300)] hover:text-white" href="#"><span
-                                    class="sr-only">Twitter</span><span class="material-icons">flutter_dash</span></a>
-                        </div>
                     </div>
                 </div>
                 <div
@@ -375,11 +427,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </footer>
 
         <div class="fixed bottom-4 right-4 z-20 flex flex-col gap-3">
-            <a href="https://wa.me/905555555555" target="_blank"
+            <a href="https://wa.me/905387410140" target="_blank"
                 class="flex h-14 w-14 items-center justify-center rounded-full bg-green-500 text-white shadow-lg transition-transform hover:scale-110">
                 <span class="material-icons text-3xl">whatsapp</span>
             </a>
-            <a href="tel:+905555555555"
+            <a href="tel:+905387410140"
                 class="flex h-14 w-14 items-center justify-center rounded-full bg-[var(--primary-600)] text-white shadow-lg transition-transform hover:scale-110">
                 <span class="material-icons text-3xl">phone</span>
             </a>
